--- a/index.html
+++ b/index.html
@@ -4,33 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelos de Autos Peugeot</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            padding: 20px;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        ul {
-            background-color: #eaeaea;
-            padding: 10px;
-            border-radius: 5px;
-            list-style-type: none;
-        }
-        ul li {
-            margin-bottom: 8px;
-        }
-        .dato-interesante {
-            background-color: #ffeb3b;
-            padding: 15px;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-style: italic;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Modelos de Autos Peugeot</h1>
